# bonaid

./: .env  .env.cloud  .env.cloud.example  .env.example  CLOUD_MIGRATION_GUIDE.md  README.md  bonaid_backup.dump  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
bonaid/: analytics.py  cache.py  cli.py  config.py  db.py  db_old.py  diagnostics.py  graph.py  llm.py  notifier.py  universe.py
bonaid.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bonaid/agents/: macro_agent.py  news_agent.py  paper_trading.py  portfolio_agent.py  risk_agent.py  sentiment_agent.py  supervisor.py  technical_agent.py
bonaid/analysis/: backtester.py  data_fetcher.py  indicators.py  metrics.py  strategies.py  synthetic_data.py
bonaid/dashboard/: main.py
bonaid/dashboard/static/: index.html
bonaid/ml/: outcome_model.py
bonaid/models/: __init__.py  base.py  base_old.py
docker/: Dockerfile  docker-compose.cloud.yml  docker-compose.yml
scripts/: README_SCHEDULING.md  run_check_positions.ps1
tests/: test_analytics.py  test_cache.py  test_dashboard.py  test_dashboard_auth.py  test_diagnostics.py  test_foundation.py  test_macro_agent.py  test_ml_outcome_model.py  test_news_agent.py  test_notifier.py  test_paper_trading.py  test_portfolio_agent.py  test_risk_agent.py  test_sentiment_agent.py  test_supervisor.py  test_technical_agent.py  test_universe.py
