[project]
name = "bonaid"
version = "0.1.0"
description = "Open-source multi-agent trading research system - Phase 1 (Foundation)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings",
    "sqlalchemy>=2.0",
    "psycopg2-binary",
    "redis",
    "typer",
    "rich",
    "python-dotenv",
    "requests",
    "langgraph",
    "langchain-core",
]

[project.scripts]
bonaid = "bonaid.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bonaid*"]
